--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -1,4 +1,4 @@
-[Introduction Project introduction]
+[http://code.google.com/p/pivotx-sqlite/ Project home]
 
   * Documentation
     * [pivotx20svn2185 pivotx_2.0-svn2185]
